--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:keepScreenOn="true">
@@ -82,79 +81,86 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:elevation="16dp" />
+
             <ProgressBar
-                android:layout_centerInParent="true"
                 android:id="@+id/remote_view_loading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:indeterminate="true"
                 app:layout_constraintBottom_toBottomOf="@id/remote_view"
                 app:layout_constraintEnd_toEndOf="@id/remote_view"
                 app:layout_constraintStart_toStartOf="@id/remote_view"
                 app:layout_constraintTop_toTopOf="@id/remote_view" />
+
             <LinearLayout
-                android:gravity="center"
+                android:id="@+id/controls"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:background="@drawable/curve_background"
                 android:backgroundTint="@android:color/secondary_text_light"
-                android:id="@+id/controls"
-                android:orientation="horizontal"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/mic_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:background="@drawable/circle_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:padding="12dp"
-                    android:background="@drawable/circle_background"
                     app:backgroundTint="@color/cardview_dark_background"
                     app:srcCompat="@drawable/ic_baseline_mic_24" />
+
                 <ImageView
                     android:id="@+id/video_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:background="@drawable/circle_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:padding="12dp"
-                    android:background="@drawable/circle_background"
                     app:backgroundTint="@color/cardview_dark_background"
                     app:srcCompat="@drawable/ic_baseline_videocam_24" />
+
                 <ImageView
                     android:id="@+id/end_call_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:background="@drawable/circle_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:padding="12dp"
-                    android:background="@drawable/circle_background"
                     app:backgroundTint="@android:color/holo_red_dark"
                     app:srcCompat="@drawable/ic_baseline_call_end_24" />
+
                 <ImageView
                     android:id="@+id/switch_camera_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:background="@drawable/circle_background"
                     android:clickable="true"
                     android:focusable="true"
                     android:padding="12dp"
-                    android:background="@drawable/circle_background"
                     app:backgroundTint="@color/cardview_dark_background"
                     app:srcCompat="@drawable/ic_baseline_cameraswitch_24" />
+
                 <ImageView
                     android:id="@+id/audio_output_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/circle_background"
                     android:clickable="true"
                     android:focusable="true"
-                    android:layout_margin="16dp"
                     android:padding="12dp"
-                    android:background="@drawable/circle_background"
                     app:backgroundTint="@color/cardview_dark_background"
                     app:srcCompat="@drawable/ic_baseline_speaker_up_24" />
             </LinearLayout>
